--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "mini-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "solution/js/mini-react.js",
   "scripts": {
+    "start": "rollup -c rollup.config.js --watch",
+    "prebuild": "rimraf solution && npm run lint",
+    "build": "rollup -c rollup.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "standard --fix lib"
@@ -23,7 +26,12 @@
     "babel-core": "6.26.3",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.7.0",
-    "jest": "23.6.0"
+    "jest": "23.6.0",
+    "rimraf": "2.6.2",
+    "rollup": "0.66.6",
+    "rollup-plugin-alias": "1.4.0",
+    "rollup-plugin-copy": "0.2.3",
+    "rollup-plugin-serve": "0.6.0"
   },
   "jest": {
     "testRegex": ".+\\.test.js$",
