--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rollup -c rollup.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "standard --fix lib"
+    "lint": "standard --fix lib/**"
   },
   "repository": {
     "type": "git",
