--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "rollup -c rollup.config.js --watch",
     "prebuild": "rimraf solution && npm run lint",
-    "build": "rollup -c rollup.config.js",
+    "build": "NODE_ENV=production rollup -c rollup.config.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "standard --fix lib/**"
