--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
   "homepage": "https://github.com/ggviana/mini-react#readme",
   "devDependencies": {
     "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "7.4.4",
     "@babel/preset-env": "7.4.4",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.16.0",
     "jest": "24.7.1",
     "rimraf": "2.6.3",
     "rollup": "1.10.1",
     "rollup-plugin-alias": "1.5.1",
     "rollup-plugin-copy": "1.1.0",
-    "rollup-plugin-serve": "1.0.1"
+    "rollup-plugin-serve": "1.0.1",
+    "standard": "12.0.1"
   },
   "jest": {
     "testRegex": "test/.+\\.js$",
@@ -46,6 +50,7 @@
     "globals": [
       "describe",
       "it",
+      "jest",
       "expect",
       "beforeEach",
       "testRoot",
@@ -53,6 +58,7 @@
       "HTMLHeadingElement",
       "HTMLLabelElement",
       "HTMLParagraphElement"
-    ]
+    ],
+    "parser": "babel-eslint"
   }
 }
